2010-05-01 Homer Xing <homer.xing@gmail.com>

    * Improve the efficiency of automatically updating "Information pane".
      Only refresh necessary items.
    * Add a feature to print all information.
    * Change "GNOME locale" icon.

2010-04-30 CHEN Yangyang <skabyy@gmail.com>

    * Merge the "Hardware information pane" and the "Linux information pane"
    * "Information pane" will now Automatically update the information

2010-04-28 QI Chengjie <starboy.qi@gmail.com>

    * Make DBus call persistent in a session

2010-04-26 MA Yue <velly.empire@gmail.com>

    * Improve "world of padman" installation in Fedora
    * Add lshw: display hardware information
    * Show "gnome control center" item in menu

2010-04-26 Homer Xing <homer.xing@gmail.com>

    * Fix problem: After installing Ailurus on Fedora, 
      "Ailurus quick setup" does not appear in "System Tools" entry.

2010-04-25 CHEN Yangyang <skabyy@gmail.com>

    * Change the position of the popup menu of toolitem
    * The remove list for kernel will not list the current using kernel anymore
    * Add a button to show all the tips of day
    * The top toolbar will automatically resize when the window is resized
    
2010-04-25 QI Chengjie <starboy.qi@gmail.com>

	* Add alacarte in Fedora
	* Display GTK version and Python-GTK version in Linux information pane
	* Add a way to modify host name
	* Add google-earth

2010-04-24 MA Yue <velly.empire@gmail.com>

    * Improve installation of Pidgin beta version

2010-04-24 Homer Xing <homer.xing@gmail.com>

    * Do not raise exception when user cancel policy-kit in clean up pane.
    * Show a notify after clearing recent documents list.
    * Fix bug: MPlayer-vod cannot be installed.
    * Fix bug: "Speed up firefox" failed if directory does not exist.
    * Fix bug: AutoProxy installation error.
    * Fix bug: Fcitx cannot be detected after installation.
    * Change text color.
    * Reduce border width of "Quick install" button. Increase its width.