@@ -21,4 +21,5 @@
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
 
 import apps
+import menu
 import osinfo
