@@ -29,31 +29,9 @@ from libu import *
 def __study_linux(main_view):
     study_url_items = [ 
         # text, web page url, Chinese only?
-        None, # Separator
-        (_('Ubuntu/Kubuntu configuration guide'),
-         'http://ubuntuguide.org/wiki/', False),
-        (_('Ubuntu skills'), 
-         'http://wiki.ubuntu.org.cn/UbuntuSkills', True),
-        (_('Obtain "Full Circle" magazine'), 
-         'http://fullcirclemagazine.org/', False),
-        (_('Obtain "Ubuntu pocket guide" book'), 
-         'http://www.ubuntupocketguide.com/', False),
-        (_('Find more third-party repositories on http://repogen.simplylinux.ch/'), 
-         'http://repogen.simplylinux.ch/', False),
-        #(_(u'How to install themes of Fedora® or OpenSolaris® on Ubuntu ?'), 
-        # 'http://tdt.sjtu.edu.cn/S/how_to/fedora_theme.html', False),
-        #(_(u'How to install Warcraft III and DotA on Ubuntu ?'), 
-        # 'http://ailurus.cn/?p=292', False),
-        #(_(u'How to install Matlab on Ubuntu ?'), 
-        # 'http://ailurus.cn/?p=285', False),
-        #(_('Ubuntu forum in China'),
-        # 'http://forum.ubuntu.org.cn/', True),
-        #(_('Quick configuration guide (in Chinese)'),
-        # 'http://wiki.ubuntu.org.cn/Qref', True),
-        #(_('Enjoy online music in Ubuntu (in Chinese)'),
-        # 'http://forum.ubuntu.org.cn/viewtopic.php?f=74&t=183104', True),
-         ]
-
+        (_('Upgrade Fedora using an application called "PreUpgrade"'),
+         'http://fedoraproject.org/wiki/PreUpgrade', False),
+    ]
     def __get_menu(items):
         ret = []
         for item in items:
