@@ -1,3 +1,7 @@
+2010-05-01 HUANG Wei <wei.kukey@gmail.com>
+
+    * Add web page url: Upgrade Fedora using an application called "PreUpgrade"
+
 2010-05-01 Homer Xing <homer.xing@gmail.com>
 
     * Improve the efficiency of automatically updating "Information pane".
